--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
   <head>
     <link rel="stylesheet" href="templates/styles.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script>
       function searchTextures() {
         var input, filter, textures, txtValue;
